* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - add mapped offset support ?
  - refactor
  - write on set value ? what about create ?
  - rename element_offset and equiv to element_data_offset

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20160403
* worked on tests
* code clean up

20160325
* worked on list

20160116
* worked on area
* worked on merging segment handling code

20160106
* 2016 update

20151226
* updated dependencies
* code clean up

20150825
* worked on stream
  - added get mapped range function

20150819
* worked on stream
  - added mapped size

20150412
* worked on btree search flags

20150409
* worked on btree search flags

20150405
* added support for less equal and greater equal for compare functions
  in libfdata_btree_node_get_sub_node_data_range_by_key

20150104
* 2015 update

20141018
* changes for deployment

20141012
* worked on utility scripts

20140920
* changes for project site move

20140915
* worked on btree

20140914
* worked on btree
* worked on tests

20140913
* worked on btree

20140912
* worked on btree
* worked on tests
* worked on fcache integration

20140911
* worked on btree
* worked on tests

20140826
* bug fixes in include header

20140817
* worked on btree

20140809
* worked on vector

20140601
* updated dependencies

20140421
* worked on list

20140206
* changes in vector

20140205
* added libfdata_list_get_element_index_at_offset
* added libfdata_stream_get_segment_at_offset

20140130
* small fix in stream header file

20140126
* list fixed multi file caching issue

20140105
* 2014 update
* updated dependencies

20130929
* worked on tree and tree node
* updated dependencies

20130922
* worked on tree and tree node

20130915
* worked on tree and tree node

20130908
* updated dependencies
* fixed memory leak in error path
* updated msvscpp files